# t-vault-web-server

./: Cargo.toml
migrations/2024-03-04-222736_create_users_table/: up.sql
migrations/2024-03-06-020249_solana_transactions_table/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  repository.rs  schema.rs  solana_transactions_repository.rs
templates/: base.html  index.html  script.js  styles.css  tx-modal.html  tx-status.html
