[package]
name = "t-vault-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
askama = { version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
solana-sdk = "1.18.3"
solana-client = "1.18.3"
borsh = { version = "1.3.1", features = ["derive"] }
bincode = "1.3.3"

t-vault = { path = "../../backend/t-vault/programs/t-vault", features = ["no-entrypoint"] }
anchor-client = { version = "0.29.0", features = ["async"] }
dotenv = "0.15.0"
base64 = "0.22.0"
diesel = { version = "2.1.4", features = ["mysql", "chrono"] }
deadpool-diesel = { version = "0.5.0", features = ["mysql"] }
chrono = "0.4.34"

